// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value has correct active=true rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center grommetux-value--active"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct className rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center testing"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct colorIndex rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center grommetux-color-index-neutral-1"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct default options 1`] = `
<div
  className="grommetux-value grommetux-value--align-center"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct label rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
  <span
    className="grommetux-value__label"
  >
    testing
  </span>
</div>
`;

exports[`Value has correct onClick rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center grommetux-value--interactive"
  onClick={[Function]}
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct onClick rendering 2`] = `
<div
  className="grommetux-value grommetux-value--align-center grommetux-value--interactive"
  onClick={[Function]}
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct size="large" rendering 1`] = `
<div
  className="grommetux-value grommetux-value--large grommetux-value--align-center"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
    </div>
  </div>
</div>
`;

exports[`Value has correct units=% rendering 1`] = `
<div
  className="grommetux-value grommetux-value--align-center"
>
  <div
    className="grommetux-value__annotated"
  >
    <div>
      <span
        className="grommetux-value__value"
      >
        75
      </span>
      <span
        className="grommetux-value__units"
      >
        %
      </span>
    </div>
  </div>
</div>
`;
